align fix

--- a/src/app/pages/catalog/about-course/about-course.component.scss
+++ b/src/app/pages/catalog/about-course/about-course.component.scss
@@ -2035,8 +2035,10 @@
     }
     .right {
       width: 100%;
+      margin-top: 2em;
       @include md {
         width: 39%;
+        margin-top: 0;
       }
       figure {
         display: flex;
@@ -2055,8 +2057,10 @@
     }
     .right {
       width: 100%;
+      margin-top: 2em;
       @include md {
         width: 58%;
+        margin-top: 0;
       }
       .heading6 {
         color: $darkGrey;
